--- a/src/index.css
+++ b/src/index.css
@@ -31,11 +31,21 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 .btn {
     padding: 0.8rem 1rem;
+    background-color: black;
     color: #fff;
     border: none;
     border-radius: 5px;
     font-size: 1rem;
     cursor: pointer;
+}
+
+.btn:active {
+    transform: scale(.98);
+}
+
+.btn-block {
+    width: 100%;
+    display: block;
 }
 
 .tasks {
@@ -55,4 +65,38 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 .reminder {
     border-left: 5px solid green;
+}
+
+.add-form {
+    padding: 20px;
+}
+
+.form-control {
+    margin-bottom: 10px;
+}
+
+.form-control input {
+    padding: 10px;
+    width: 100%;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
+.form-control label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-control-check {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.form-control-check label {
+    flex: 1;
+}
+.form-control-check input {
+    flex: 2;
+    height: 20px;
 }
